estructura modular: publico, asistente, admin

--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -1,10 +1,11 @@
 <div class="m-2">
 
     <div>
-        <button mat-button routerLink="/publico">Ver llamados</button>
+        <button mat-button routerLink="/publico/pantalla">Pantalla</button>
     </div>
+
     <div>
-        <button mat-button routerLink="/nuevo-ticket">Obtener Turno</button>
+        <button mat-button routerLink="/publico/turnos">Turnos</button>
     </div>
 
     <div>
