--- a/src/app/pages/registro/registro.component.html
+++ b/src/app/pages/registro/registro.component.html
@@ -1,1 +1,60 @@
-<p>registro works!</p>
+<form autocomplete="off" class="form-container m-3" ngNativeValidate [formGroup]="forma" (ngSubmit)="registrarUsuario()" id="loginform"
+    action="index.html">
+
+    <mat-form-field color="warn" appearance="fill" logincss class="w-100">
+        <mat-label>Nombre</mat-label>
+        <input matInput placeholder="Nombre" formControlName="nombre" name="nombre" type="text" required
+            placeholder="Nombre">
+    </mat-form-field>
+
+    <mat-form-field color="warn" appearance="fill" logincss class="w-100">
+        <mat-label>Email</mat-label>
+        <input matInput placeholder="Email" formControlName="email" name="email" type="email" required
+            placeholder="Correo" >
+    </mat-form-field>
+    
+    <mat-form-field color="warn" appearance="fill" logincss class="w-100">
+        <mat-label>Empresa</mat-label>
+        <input matInput placeholder="Empresa" formControlName="empresa" name="empresa" type="text" required
+            placeholder="Empresa">
+    </mat-form-field>
+
+    <mat-form-field color="warn" appearance="fill" logincss class="w-100">
+        <mat-label>Clave</mat-label>
+        <input matInput placeholder="Clave" formControlName="password" name="password" type="password" required
+            placeholder="Contraseña" autocomplete="new-password">
+    </mat-form-field>
+
+    <mat-form-field color="warn" appearance="fill" logincss class="w-100">
+        <mat-label>Ingresa la clave nuevamente</mat-label>
+        <input matInput placeholder="Clave" formControlName="password2" name="password2" type="password" required
+            placeholder="Confirma contraseña" autocomplete="new-password">
+    </mat-form-field>
+
+    <div class="form-group row">
+        <div class="col-md-12">
+            <div class="p-2 rounded">
+
+                <input formControlName="condiciones" name="condiciones" id="checkbox-signup" type="checkbox"
+                    class="checkbox checkbox-primary">
+                <label for="checkbox-signup" style="font-size: 12px;"> Estoy de acuerdo con los términos</label>
+
+            </div>
+        </div>
+    </div>
+
+    <div class="form-group text-center">
+
+        <button class="btn btn-info btn-block text-uppercase waves-effect waves-light"
+            type="submit">Registrarme</button>
+
+    </div>
+
+    <div class="form-group m-b-0">
+        <div class="col-sm-12 text-center">
+            <p>¿Tienes una cuenta? <a routerLink="/login" class="text-info m-l-5"><b>Ingresa ahora</b></a>
+            </p>
+        </div>
+    </div>
+
+</form>
