--- a/src/app/components/chat/chat.component.html
+++ b/src/app/components/chat/chat.component.html
@@ -18,7 +18,7 @@
         <div class="col-10" style="align-self: center">
 
             <!-- <mat-label>CONSULTA A INFORMES</mat-label> -->
-            <input type="text" class="chat-textarea" #textmsg matInput placeholder="INFORMES"
+            <input type="text" autocomplete="off" class="chat-textarea" #textmsg matInput placeholder="INFORMES"
                 (keydown.enter)="sendMessage( textmsg, chatmessages )">
 
         </div>
