--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,1 +1,86 @@
-<p>login works!</p>
+<!-- <form class="form-horizontal form-material" -->
+<form class="m-3" ngNativeValidate #f="ngForm" (ngSubmit)="login( f )">
+
+
+    <!---------------------------------------------------------------------->
+    <!-- EMAIL -->
+    <!---------------------------------------------------------------------->
+    <div class="my-2">
+        <!-- <input [ngModel]="email" name="email" class="form-control" type="email" required
+                        placeholder="Correo del usuario"> -->
+        <mat-form-field color="warn" appearance="fill" logincss class="w-100">
+            <mat-label>Ingrese su Email</mat-label>
+            <input #inputEmail matInput placeholder="sumail@dominio.com" [ngModel]="email" name="email">
+            <span class="input-icon" (click)="cleanEmail(inputEmail, inputPassword)"><i
+                    class="mdi mdi-close"></i></span>
+        </mat-form-field>
+    </div>
+
+
+    <!---------------------------------------------------------------------->
+    <!-- PASSWORD -->
+    <!---------------------------------------------------------------------->
+    <!-- <div class="my-2">
+                    <input ngModel name="password" class="form-control" type="password" required
+                        placeholder="Contraseña">
+                </div> -->
+    <div class="my-2">
+        <!-- <input [ngModel]="email" name="email" class="form-control" type="email" required
+                        placeholder="Correo del usuario"> -->
+        <mat-form-field color="warn" appearance="fill" logincss class="w-100">
+            <mat-label>Ingrese su Password</mat-label>
+            <input #inputPassword matInput placeholder="password" ngModel name="password"
+                [type]="hidepass ? 'password' : 'text'" required>
+
+            <!--<button mat-icon-button matSuffix (click)="hidepass = !hidepass"
+                            [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hidepass">
+                              <mat-icon>{{hidepass ? 'visibility_off' : 'visibility'}}</mat-icon> 
+                            </button>-->
+
+            <span class="input-icon" (click)="hidepass = !hidepass" [attr.aria-label]="'Hide password'"
+                [attr.aria-pressed]="hidepass"><i class="mdi {{hidepass ? 'mdi-eye-off' : 'mdi-eye'}}"></i></span>
+        </mat-form-field>
+    </div>
+
+
+    <div class="inputs-container rounded">
+
+
+        <!---------------------------------------------------------------------->
+        <!-- RECUERDEME -->
+        <!---------------------------------------------------------------------->
+        <div class="my-2" style="height:20px">
+            <div class="checkbox checkbox-primary pull-left">
+                <input [(ngModel)]="recuerdame" name="recuerdame" id="checkbox-signup" type="checkbox"
+                    class="filled-in chk-col-light-blue">
+                <label for="checkbox-signup"> Recuérdame </label>
+            </div>
+        </div>
+        <hr>
+
+
+        <!---------------------------------------------------------------------->
+        <!-- INGRESAR / GOOGLE -->
+        <!---------------------------------------------------------------------->
+        <div class="text-center w-100">
+
+            <!-- Normal Login -->
+            <button class="btn btn-success m-2" type="submit">Ingresar</button>
+
+            <!-- Google Login -->
+            <button class="btn btn-danger m-2" type="button" id="btnGoogle" data-toggle="tooltip">Google
+            </button>
+
+        </div>
+
+        <!---------------------------------------------------------------------->
+        <!-- REGISTRARSE -->
+        <!---------------------------------------------------------------------->
+        <div class="mt-4 text-center">
+            No tienes cuenta? <a routerLink="/registro" class="text-primary m-l-5"><b>Crear cuenta</b></a>
+        </div>
+        <div class="mt-4 text-center">
+            <a routerLink="/inicio">Volver al inicio</a>
+        </div>
+    </div>
+</form>
