--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -80,7 +80,7 @@
             No tienes cuenta? <a routerLink="/registro" class="text-primary m-l-5"><b>Crear cuenta</b></a>
         </div>
         <div class="mt-4 text-center">
-            <a routerLink="/inicio">Volver al inicio</a>
+            <a routerLink="/home">Volver al inicio</a>
         </div>
     </div>
 </form>
