--- a/src/app/pages/nopagefound/nopagefound.component.html
+++ b/src/app/pages/nopagefound/nopagefound.component.html
@@ -1,1 +1,13 @@
-<p>nopagefound works!</p>
+<div class="container text-center h-100 p-5">
+
+        <div class="m-3" style="font-size: 3rem;">UPS!</div>
+        <div class="m-3" style="font-size: 1rem;">No existe la página</div>
+            <div class="material-icons" style="font-size: 5rem; color: red;">
+                sentiment_very_dissatisfied
+            </div>
+            <a routerLink="/home">
+    
+                <h3>Volver al inicio</h3>
+            </a>
+
+</div>
