--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,9 +1,10 @@
-<app-toolbar (toggleSideNav)="toggle( sidenav )"></app-toolbar>
-
-<mat-drawer-container class="example-container h-100">
-
-  <mat-drawer #sidenav id="sidenav" mode="over" >
-    <app-sidenav></app-sidenav>
-  </mat-drawer>
-
-</mat-drawer-container>
+<div class="jumbotron m-2">
+  <h1 class="display-4">Tickets Online!</h1>
+  <p class="lead">Bienvenido, desde aquí puede sacar un turno y evitar la sala de esperas.</p>
+  <hr class="my-4">
+  <p>Usted será notificado sobre tiempos de atención, tenga en cuenta que si usted no se encuentra lo suficientemente cerca de 
+      la recepción al momento de que usted sea llamado, tendrá disponible un botón con el cual usted podrá solicitar minutos 
+      extra para asistir a la ventanilla.
+  </p>
+  <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+</div>
