--- a/src/app/pages/publico/pantalla/pantalla.component.html
+++ b/src/app/pages/publico/pantalla/pantalla.component.html
@@ -5,7 +5,7 @@
         <!-- SU TURNO FINALIZADO -->
         <!-- ======================================================== -->
 
-        <div class="card text-white bg-danger mb-4" *ngIf="!ticketsService.myTicket">
+        <div class="card text-white bg-danger mb-4" *ngIf="!ticketsService.myTicket && ticketsService.myTicket_end">
             <div class="card-header banner-title">TURNO FINALIZADO </div>
             <div class="banner-content" style="background-color: rgb(141, 51, 51)">
                 <div class="container">
@@ -154,6 +154,7 @@
                 </div>
             </div>
         </div>
+        
+       
     </div>
-
 </div>
