--- a/src/app/pages/asistente/home/home.component.html
+++ b/src/app/pages/asistente/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="jumbotron m-2">
-    <h1 class="display-4">Bienvenido a la web del cliente</h1>
+    <h1 class="display-4">Bienvenido a la web del asistente</h1>
     <p class="lead">Bienvenido, desde aquí puede sacar un turno y evitar la sala de esperas.</p>
 
     <div class="my-4">
@@ -18,5 +18,5 @@
         la ventanilla de informes para todas las consultas que todavía permanecen en espera.
     </p>
 
-    <a class="btn btn-primary btn-lg" href="#" role="button">Dashboard</a>
+    <a class="btn btn-primary btn-lg" routerLink="/asistente/dashboard" role="button">Dashboard</a>
 </div>
