--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,10 +1,11 @@
 <div class="jumbotron m-2">
-  <h1 class="display-4">Tickets Online!</h1>
+  <h1 class="display-4">Bienvenido a la Web de Turnos</h1>
   <p class="lead">Bienvenido, desde aquí puede sacar un turno y evitar la sala de esperas.</p>
   <hr class="my-4">
-  <p>Usted será notificado sobre tiempos de atención, tenga en cuenta que si usted no se encuentra lo suficientemente cerca de 
-      la recepción al momento de que usted sea llamado, tendrá disponible un botón con el cual usted podrá solicitar minutos 
+  <p> Tenga en cuenta que si usted no se encuentra lo suficientemente cerca de la recepción al momento 
+      de que usted sea llamado, tendrá disponible un botón con el cual usted podrá solicitar minutos 
       extra para asistir a la ventanilla.
   </p>
-  <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+  
+  <a class="btn btn-primary btn-lg" routerLink="/publico" role="button">TURNOS</a>
 </div>
