--- a/src/app/components/chat/chat.component.html
+++ b/src/app/components/chat/chat.component.html
@@ -1,9 +1,10 @@
-<div class="p-2 h-100 chat-content" style="width: 99%;">
+<div class="h-100">
 
     <!-- MESSAGES -->
     <div class="row" #chatmessages id="chatmessages" style="height: 87%;overflow-y: auto;">
         <div class="col">
-            <div *ngFor="let message of ticketsService.chatMessages" class="message m-2" [ngClass]="{'message-me': message.own}">
+            <div *ngFor="let message of ticketsService.chatMessages" class="message m-2"
+                [ngClass]="{'message-me': message.own}">
                 {{ message.message }}
                 <br>
                 <span class="message-time">{{ message.time | messageTime }}</span>
