--- a/src/app/pages/publico/home-publico/home-publico.component.html
+++ b/src/app/pages/publico/home-publico/home-publico.component.html
@@ -1,10 +1,18 @@
 <div class="jumbotron m-2">
     <h1 class="display-4">Bienvenido a la web publica</h1>
-    <p class="lead">Bienvenido, desde aquí puede sacar un turno y evitar la sala de esperas.</p>
-    <hr class="my-4">
-    <p>Usted será notificado sobre tiempos de atención, tenga en cuenta que si usted no se encuentra lo suficientemente cerca de 
-        la recepción al momento de que usted sea llamado, tendrá disponible un botón con el cual usted podrá solicitar minutos 
-        extra para asistir a la ventanilla.
-    </p>
-    <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-  </div>
+
+        <!---------------------------------------------------------------------->
+        <!-- EMAIL -->
+        <!---------------------------------------------------------------------->
+        <div class="my-2">
+            <mat-form-field color="warn" appearance="fill" logincss class="w-100">
+                <mat-label>Ingrese la empresa</mat-label>
+                <input #inputCompany matInput placeholder="Empresa S.A." >
+                <span class="input-icon"><i
+                        class="mdi mdi-close"></i></span>
+            </mat-form-field>
+        </div>
+        <button class="btn btn-success" (click)="findCompany(inputCompany)">Buscar</button>
+    
+
+</div>
