--- a/src/app/pages/registro/registro.component.html
+++ b/src/app/pages/registro/registro.component.html
@@ -3,7 +3,7 @@
 
     <mat-form-field color="warn" appearance="fill" logincss class="w-100">
         <mat-label>Nombre</mat-label>
-        <input matInput placeholder="Nombre" formControlName="nombre" name="nombre" type="text" required
+        <input matInput placeholder="Nombre" formControlName="name" name="name" type="text" required
             placeholder="Nombre">
     </mat-form-field>
 
@@ -15,13 +15,13 @@
     
     <mat-form-field color="warn" appearance="fill" logincss class="w-100">
         <mat-label>Empresa</mat-label>
-        <input matInput placeholder="Empresa" formControlName="empresa" name="empresa" type="text" required
+        <input matInput placeholder="Empresa" formControlName="company" name="company" type="text" required
             placeholder="Empresa">
     </mat-form-field>
 
     <mat-form-field color="warn" appearance="fill" logincss class="w-100">
         <mat-label>Clave</mat-label>
-        <input matInput placeholder="Clave" formControlName="password" name="password" type="password" required
+        <input matInput placeholder="Clave" formControlName="password1" name="password1" type="password" required
             placeholder="Contraseña" autocomplete="new-password">
     </mat-form-field>
 
