--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,7 @@
 .material-icons.orange600 { color: #FB8C00; }
 .mat-drawer-chat {
-    width: 80%;
-    background-color: transparent;
-    padding: 0.5rem;
+    width: 100%;
+    background-color: rgba(0,0,0,.5);
     box-shadow: none;
 }
+
