--- a/src/app/pages/publico/home-publico/home-publico.component.html
+++ b/src/app/pages/publico/home-publico/home-publico.component.html
@@ -7,7 +7,7 @@
         <div class="my-2">
             <mat-form-field color="warn" appearance="fill" logincss class="w-100">
                 <mat-label>Ingrese la empresa</mat-label>
-                <input #inputCompany matInput placeholder="Empresa S.A." >
+                <input id="inputCompany" #inputCompany matInput placeholder="Empresa S.A." (keydown.enter)="findCompany(inputCompany)">
                 <span class="input-icon"><i
                         class="mdi mdi-close"></i></span>
             </mat-form-field>
