--- a/src/app/pages/registro/registro.component.html
+++ b/src/app/pages/registro/registro.component.html
@@ -1,34 +1,48 @@
 <form autocomplete="off" class="form-container m-3" ngNativeValidate [formGroup]="forma" (ngSubmit)="registrarUsuario()" id="loginform"
     action="index.html">
 
+    <!-- Company -->
+
     <mat-form-field color="warn" appearance="fill" logincss class="w-100">
-        <mat-label>Nombre</mat-label>
-        <input matInput placeholder="Nombre" formControlName="name" name="name" type="text" required
-            placeholder="Nombre">
+        <mat-label>Nombre de la Empresa</mat-label>
+        <input matInput placeholder="Nombre de la empresa" formControlName="company" name="company" type="text" required>
+    </mat-form-field>
+
+    <mat-form-field color="warn" appearance="fill" logincss class="w-100">
+        <mat-label>Calle</mat-label>
+        <input matInput placeholder="Calle" formControlName="addressStreet" name="addressStreet" type="text" required>
+    </mat-form-field>
+    
+    <mat-form-field color="warn" appearance="fill" logincss class="w-100">
+        <mat-label>Altura</mat-label>
+        <input matInput placeholder="Altura" formControlName="addressNumber" name="addressNumber" type="text" required>
+    </mat-form-field>
+    
+    <mat-form-field color="warn" appearance="fill" logincss class="w-100">
+        <mat-label>Ciudad</mat-label>
+        <input matInput placeholder="Ciudad" formControlName="city" name="city" type="text" required>
+    </mat-form-field>
+    
+    <!-- User -->
+
+    <mat-form-field color="warn" appearance="fill" logincss class="w-100">
+        <mat-label>Nombre de Usuario</mat-label>
+        <input matInput placeholder="Nombre de Ususario" formControlName="name" name="name" type="text" required>
     </mat-form-field>
 
     <mat-form-field color="warn" appearance="fill" logincss class="w-100">
         <mat-label>Email</mat-label>
-        <input matInput placeholder="Email" formControlName="email" name="email" type="email" required
-            placeholder="Correo" >
+        <input matInput placeholder="Email" formControlName="email" name="email" type="email" required>
     </mat-form-field>
     
     <mat-form-field color="warn" appearance="fill" logincss class="w-100">
-        <mat-label>Empresa</mat-label>
-        <input matInput placeholder="Empresa" formControlName="company" name="company" type="text" required
-            placeholder="Empresa">
-    </mat-form-field>
-
-    <mat-form-field color="warn" appearance="fill" logincss class="w-100">
         <mat-label>Clave</mat-label>
-        <input matInput placeholder="Clave" formControlName="password1" name="password1" type="password" required
-            placeholder="Contraseña" autocomplete="new-password">
+        <input matInput placeholder="Clave" formControlName="password1" name="password1" type="password" required>
     </mat-form-field>
 
     <mat-form-field color="warn" appearance="fill" logincss class="w-100">
         <mat-label>Ingresa la clave nuevamente</mat-label>
-        <input matInput placeholder="Clave" formControlName="password2" name="password2" type="password" required
-            placeholder="Confirma contraseña" autocomplete="new-password">
+        <input matInput placeholder="Clave" formControlName="password2" name="password2" type="password" required>
     </mat-form-field>
 
     <div class="form-group row">
