--- a/src/app/pages/user/home-user/home-user.component.html
+++ b/src/app/pages/user/home-user/home-user.component.html
@@ -1,1 +1,7 @@
-home usuario
+<div class="container">
+    <div class="row">
+        <div class="col">
+            Bienvenido
+        </div>
+    </div>
+</div>
